--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-# d3v1lsblood.github.io
-Project website
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Project: Travel webpage</title>
+  </head>
+  <body>
+    
+    <h1>Travel to Costa Rica</h1>
+    
+    <p>...and you'll get to see some crocs!</p>
+  </body>
+</html>
